# synledger-core

./: .clang-format  CMakeLists.txt  Dockerfile
include/consensus/: consensus.hpp  posyg_engine.hpp
include/cryptography/: crypto.hpp  ecdsa.hpp  zk_proofs.hpp
include/economic/: synergy_model.hpp
include/governance/: governance.hpp
include/ledger/: block.hpp  ledger.hpp
include/network/: node_discovery.hpp  p2p_protocol.hpp
include/subnet/: subnet_manager.hpp
src/: CMakeLists.txt  main.cpp
src/consensus/: consensus.cpp  posyg_engine.cpp
src/cryptography/: crypto.cpp  ecdsa.cpp  zk_proofs.cpp
src/economic/: synergy_model.cpp
src/governance/: governance.cpp
src/ledger/: block.cpp  ledger.cpp
src/network/: node_discovery.cpp  p2p_protocol.cpp
src/subnet/: subnet_manager.cpp
tests/: CMakeLists.txt  consensus_tests.cpp  governance_tests.cpp  ledger_tests.cpp  p2p_tests.cpp  subnet_tests.cpp  synergy_tests.cpp
