# tests/CMakeLists.txt

# Uncomment or add these targets when the respective test files are available

# add_executable(test_consensus tests/consensus_tests.cpp)
# target_link_libraries(test_consensus libconsensus)

# add_executable(test_governance tests/governance_tests.cpp)
# target_link_libraries(test_governance libconsensus)

# add_executable(test_ledger tests/ledger_tests.cpp)
# target_link_libraries(test_ledger libconsensus libcryptography)

# add_executable(test_p2p tests/p2p_tests.cpp)
# target_link_libraries(test_p2p libconsensus)

# add_executable(test_subnet tests/subnet_tests.cpp)
# target_link_libraries(test_subnet libconsensus)

# add_executable(test_synergy tests/synergy_tests.cpp)
# target_link_libraries(test_synergy libconsensus)

# Uncomment these when ready to add testing
# add_test(NAME test_consensus COMMAND test_consensus)
# add_test(NAME test_governance COMMAND test_governance)
# add_test(NAME test_ledger COMMAND test_ledger)
# add_test(NAME test_p2p COMMAND test_p2p)
# add_test(NAME test_subnet COMMAND test_subnet)
# add_test(NAME test_synergy COMMAND test_synergy)
